force-app/main/default/objects/Transaction_Log__c/Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>e2a Transaction Log</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>