force-app/main/default/objects/Transaction_Log__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email</label>
    <referenceTo>EmailMessage__c</referenceTo>
    <relationshipLabel>e2a Transaction Logs</relationshipLabel>
    <relationshipName>e2a_Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>