force-app/main/default/objects/Transaction_Log__c/fields/Email_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Rule_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Rule Id</label>
    <referenceTo>Email_Services_Function__c</referenceTo>
    <relationshipName>e2a_Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>