force-app/main/default/objects/Transaction_Log__c/fields/Email_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Service_Id__c</fullName>
    <label>Email Service Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>