force-app/main/default/objects/Transaction_Log__c/fields/Message_Id_and_Email_Rule_Id_Hash__c.field-meta.xml
<CustomField>
    <fullName>Message_Id_and_Email_Rule_Id_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Message Id and Email Rule Id Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>