force-app/main/default/objects/Transaction_Log__c/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed - Success</fullName>
            </value>
            <value>
                <fullName>Processed - Error</fullName>
            </value>
            <value>
                <fullName>Dropped Duplicate</fullName>
            </value>
            <value>
                <fullName>Dropped Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>