force-app/main/default/objects/Transaction_Log__c/fields/Transaction_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Transaction_DateTime__c</fullName>
    <label>Transaction DateTime</label>
    <type>DateTime</type>
</CustomField>